Added  styling for mobile and computer screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@100;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Raleway:wght@100;400;500;600;700&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -15,4 +15,12 @@ body {
 
 .container {
   display: flex;
+  width: 100%;
+}
+
+@media only screen and (max-width: 749px) {
+  .container {
+    display: block;
+    width: 100%;
+  }
 }
