--- a/src/UI/WeatherForecast.module.css
+++ b/src/UI/WeatherForecast.module.css
@@ -1,16 +1,21 @@
+@media only screen and (max-width: 749px) {
+  .forecastCard {
+    margin-bottom: 25px;
+  }
+}
 .forecastCard {
   width: 120px;
-  height: 177px;
+  height: 170px;
   background-color: #1e213a;
   display: flex;
   align-items: center;
   flex-direction: column;
-  color: #e7e7eb;
+  margin: 10px;
 }
 
 .forecastCard img {
   width: 62px;
-  margin-bottom: 31px;
+  margin-bottom: 35px;
 }
 
 .forecastCard span {
