--- a/src/weather/MainWeather.module.css
+++ b/src/weather/MainWeather.module.css
@@ -1,73 +1,142 @@
-.mainWeather {
-  width: 70%;
-  height: 100vh;
-  background-color: #100e1d;
+@media only screen and (max-width: 749px) {
+  .mainWeather {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10px;
+    background-color: #100e1d;
+    z-index: 1;
+  }
+
+  .mainContainer {
+    width: 100%;
+    margin: auto;
+  }
+
+  .btnContainer {
+    width: 90%;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 20px;
+    margin-bottom: 30px;
+  }
+
+  .btnContainer :first-child {
+    margin-right: 12px;
+  }
+
+  .forecastContainer {
+    width: 75%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .highlightTitle {
+    font-family: "Raleway", "sans-serif";
+    color: #e7e7eb;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 30px;
+  }
+
+  footer {
+    text-align: center;
+    color: #a09fb1;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+  }
+
+  footer a {
+    color: #a09fb1;
+    text-decoration: none;
+    text-decoration: underline;
+  }
 }
 
-.mainContainer {
-  width: 70%;
-  margin: auto;
-  margin-top: 32px;
+@media only screen and (max-width: 1000px) and (min-width: 733px) {
+  .mainWeather {
+    width: 60%;
+    height: 100%;
+    background-color: #100e1d;
+    z-index: 2;
+  }
+
+  .mainContainer {
+    width: 80%;
+    margin: auto;
+    margin-top: 32px;
+  }
+
+  .forecastContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .highlightTitle {
+    font-family: "Raleway", "sans-serif";
+    color: #e7e7eb;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (min-width: 1001px) {
+  .mainWeather {
+    width: 75%;
+    height: auto;
+    background-color: #100e1d;
+    z-index: 2;
+  }
+
+  .mainContainer {
+    width: 80%;
+    margin: auto;
+    margin-top: 32px;
+  }
+
+  .forecastContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+  }
+
+  .highlightTitle {
+    font-family: "Raleway", "sans-serif";
+    color: #e7e7eb;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 60px;
+  }
 }
 
 .btnContainer {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 46px;
+  margin-bottom: 30px;
 }
 
 .btnContainer :first-child {
   margin-right: 12px;
 }
 
-.forecastContainer {
+footer {
   display: flex;
-  justify-content: space-around;
-}
-
-.highlightTitle {
-  font-family: "Raleway", "sans-serif";
-  color: #e7e7eb;
-  font-weight: 700;
-  font-size: 24px;
-  margin-top: 42px;
-}
-
-.weatherHighlights {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 35px;
+  justify-content: center;
+  align-items: flex-end;
+  height: auto;
+  color: #a09fb1;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
-.highlight h1 {
-  margin: 10px;
-}
-
-.highlight p {
-  margin: 0;
-  margin-top: 15px;
-}
-
-.highlight input {
-  width: 65%;
-  margin: auto;
-  margin: 0;
-  margin-bottom: 25px;
-}
-
-.weatherHighlightsLower {
-  display: flex;
-  justify-content: space-between;
-}
-
-.lowerHighlight p {
-  margin: 0;
-  margin-top: 15px;
-}
-
-.lowerHighlight h1 {
-  margin: 0;
-  margin-bottom: 25px;
+footer a {
+  color: #a09fb1;
+  text-decoration: none;
+  text-decoration: underline;
 }
