--- a/src/weather/SearchBar.module.css
+++ b/src/weather/SearchBar.module.css
@@ -1,5 +1,207 @@
-.searchBar {
-  width: 30%;
+@media only screen and (max-width: 1000px) and (min-width: 733px) {
+  .searchBar {
+    display: flex;
+    width: 40%;
+    height: auto;
+    background-color: #1e213a;
+  }
+}
+
+@media only screen and (max-width: 749px) {
+  .searchBar {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #1e213a;
+    z-index: 2;
+  }
+
+  .cloudBackground {
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    height: 85%;
+    background-image: url(../assets/Cloud-background.png);
+    background-repeat: no-repeat;
+    background-size: 140%;
+    background-position: -90px 0;
+    opacity: 0.1;
+    z-index: 1;
+  }
+
+  .searchBarContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    color: #e7e7eb;
+  }
+
+  .btnContainer {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 70px;
+  }
+
+  .searchBtn {
+    width: 45%;
+    font-weight: 500;
+    font-size: 16px;
+    color: #e7e7eb;
+    background: #6e707a;
+    border: none;
+  }
+
+  .geoLocation {
+    color: #e7e7eb;
+    background: #6e707a;
+  }
+
+  .geoLocation span {
+    vertical-align: middle;
+  }
+
+  .searchBarContainer h1 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 48px;
+    font-weight: 100;
+  }
+
+  .searchBarTemp {
+    font-size: 144px;
+    font-weight: 500;
+  }
+
+  .searchBarContainer p {
+    color: #a09fb1;
+    font-weight: 600;
+    font-size: 36px;
+    margin: 15px;
+  }
+
+  .searchBarDay {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+    color: #88869d;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .location {
+    margin-top: 20px;
+    color: #88869d;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .location :first-child {
+    margin-right: 5px;
+    vertical-align: middle;
+  }
+}
+
+@media only screen and (min-width: 1001px) {
+  .searchBar {
+    display: flex;
+    align-items: center;
+    width: 25%;
+    background-color: #1e213a;
+  }
+}
+
+.cloudBackground {
+  position: absolute;
+  top: 10%;
+  width: 37%;
+  height: 85%;
+  background-image: url(../assets/Cloud-background.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: -100px 0;
+  opacity: 0.1;
+  z-index: 1;
+}
+
+.searchBarContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   height: 100vh;
-  background-color: #1e213a;
+  z-index: 2;
+  color: #e7e7eb;
+  margin-top: 32px;
+}
+
+.btnContainer {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.searchBtn {
+  width: 45%;
+  font-weight: 500;
+  font-size: 16px;
+  color: #e7e7eb;
+  background: #6e707a;
+  border: none;
+}
+
+.geoLocation {
+  color: #e7e7eb;
+  background: #6e707a;
+}
+
+.geoLocation span {
+  vertical-align: middle;
+}
+
+.searchBar img {
+  width: 50%;
+}
+
+.searchBarContainer h1 {
+  font-size: 48px;
+  font-weight: 100;
+}
+
+.searchBarTemp {
+  font-size: 144px;
+  font-weight: 500;
+}
+
+.searchBarContainer p {
+  color: #a09fb1;
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.searchBarDay {
+  width: 55%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 55px;
+  color: #88869d;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.location {
+  margin-top: 20px;
+  color: #88869d;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.location :first-child {
+  margin-right: 5px;
+  vertical-align: middle;
 }
