--- a/src/UI/WeatherForecast.module.css
+++ b/src/UI/WeatherForecast.module.css
@@ -1,13 +1,37 @@
 @media only screen and (max-width: 749px) {
+  .dailyForecast {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+
   .forecastCard {
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
 
-.dailyForecast {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+@media only screen and (max-width: 1000px) and (min-width: 750px) {
+  .dailyForecast {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+
+  .forecastCard {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+}
+
+@media only screen and (min-width: 1001px) {
+  .dailyForecast {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .forecastCard {
