--- a/src/weather/weatherHighlight/Visibility.module.css
+++ b/src/weather/weatherHighlight/Visibility.module.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     width: 47%;
     margin-top: 30px;
   }
