Seperated some code into different files

--- a/src/weather/mainWeather/WeatherForecast.module.css
+++ b/src/weather/mainWeather/WeatherForecast.module.css
@@ -10,6 +10,14 @@
     margin-top: 20px;
     margin-left: 20px;
   }
+
+  .forecastContainer {
+    width: 75%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 @media only screen and (max-width: 1000px) and (min-width: 750px) {
@@ -24,6 +32,12 @@
     margin-top: 20px;
     margin-left: 20px;
   }
+
+  .forecastContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 @media only screen and (min-width: 1001px) {
@@ -31,6 +45,13 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+  }
+
+  .forecastContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
   }
 }
 
