--- a/src/weather/SearchBar.module.scss
+++ b/src/weather/SearchBar.module.scss
@@ -4,7 +4,7 @@
   height: auto;
   background-color: #1e213a;
   @media (max-width: 1024px) {
-    width: 40%;
+    width: 35%;
   }
   @media (max-width: 749px) {
     width: 100%;
@@ -23,6 +23,7 @@
     z-index: 1;
     @media (max-width: 1024px) {
       background-size: 50%;
+      background-position: -30px 0;
     }
     @media (max-width: 749px) {
       width: 100%;
@@ -35,7 +36,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    z-index: 2;
     color: #e7e7eb;
     margin-top: 32px;
     @media (max-width: 749px) {
