--- a/src/weather/mainWeather/Footer.module.scss
+++ b/src/weather/mainWeather/Footer.module.scss
@@ -3,7 +3,6 @@
   width: 100%;
   justify-content: center;
   align-items: flex-end;
-  height: auto;
   color: #a09fb1;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
@@ -11,7 +10,6 @@
 
   a {
     color: #a09fb1;
-    text-decoration: none;
-    text-decoration: underline;
+    text-decoration: none, underline;
   }
 }
