Fixed font-weight and color

--- a/src/weather/mainWeather/WeatherForecast.module.scss
+++ b/src/weather/mainWeather/WeatherForecast.module.scss
@@ -35,6 +35,11 @@
 
       span {
         margin: 10px;
+        font-weight: 500;
+      }
+
+      .min {
+        color: #a09fb1;
       }
     }
   }
